fix: chapter split alignment in course page for better UI/UX.

--- a/assets/scss/modules/_chapters.scss
+++ b/assets/scss/modules/_chapters.scss
@@ -238,7 +238,7 @@
 }
 
 .chapters__split {
-  @apply flex flex-col items-center gap-10;
+  @apply flex flex-col gap-10;
 }
 
 .chapters-backdrop {
